# gtfstop

./: GTFS_Graphs.ipynb  Local_GTFS.ipynb  README.md  local.py  pyproject.toml  regional.py
City_Networks/: Aachen_transit_map.html  Stuttgart_transit_map.html
Data/Local_Transit/processed/: data.pt
Data/Local_Transit/results/city_networks/: Aachen_transit_map.html
Data/processed/: data.pt
experiments/: Local_GTFS.ipynb
processed/: data.pt
