[tool.poetry]
name = "gtfstop"
version = "0.1.0"
authors = ["Tejas Srinivasan <tejas.srinivasan@tum.de>"]
description = "Topological Analysis of GTFS Data"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
peartree = "^0.6.4"
matplotlib = "^3.7.1"
osmnx = "^1.6.0"
networkx = "^3.1"
numpy = "^1.23.5"
pandas = "^1.5.3"
ripser = "^0.6.4"
persim = "^0.3.1"
requests = "^2.31.0"
folium = "^0.14.0"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
IPython = "^7.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"